--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,25 @@
 apply plugin: 'java'
 
+buildscript {
+    apply from: file('gradle/buildscript.gradle'), to: buildscript
+}
+
 repositories {
+    mavenLocal()
     mavenCentral()
 }
 
+apply from: file('gradle/release.gradle')
+apply from: file('gradle/convention.gradle')
+apply from: file('gradle/check.gradle')
+
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.11'
+    compile 'com.couchbase.client:java-client:2.0.3'
+    compile 'com.netflix.eureka:eureka-client:1.1.155'
+}
+
+jar {
+    dependsOn versionInfo
+    baseName = "$artifact"
+    version = "$releaseVersion"
 }
