--- a/gradle/convention.gradle
+++ b/gradle/convention.gradle
@@ -44,6 +44,10 @@ plugins.withType(JavaPlugin) {
         archives sourcesJar
         archives javadocJar
     }
+
+    dependencies {
+        testCompile 'junit:junit:4.12'
+    }
 }
 
 // Generates Gradle Wrapper
